stuf/src/p6/tests/t021.err
Semantic error on line 6: Incorrect type for parameter 'animation_block' of object mister_trippy.
