stuf/src/p6/tests/t021.gpl
//Incorrect type error
forward animation stretch(triangle);

double trouble;

triangle mister_trippy(animation_block=trouble);
